[package]
name = "ronin-address-export"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wally"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features = ["full"]}
web3 = {version = "0.18.0", features = ["default"]}
serde = {version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
dialoguer = "0.10.2"
reqwest = "0.11.11"
reqwest-retry = "0.1.5"
reqwest-middleware = "0.1.6"
indicatif = "0.17.0"